syntax = "proto3";

package video;
option go_package = "api/v1";
message VideoRequest {
  string type = 1;
  string url = 2;
}