syntax = "proto3";

package video;

option go_package = "api/v1";

message VideoResponse {
  bool success= 1;
}