syntax = "proto3";

package video;
option go_package = "api/v1";
import "VideoResponse.proto";
import "VideoRequest.proto";
service Converter {
  rpc ConvertVideo (VideoRequest) returns (VideoResponse);
}